example/ffi/headers/rune.h

typedef struct Error Error_t;
typedef struct RunicosBaseImage RunicosBaseImage_t;
typedef struct RuneResult RuneResult_t;
typedef uint32_t LogLevel_t;
typedef struct {

  void *env_ptr;

  CapabilityResult_t *(*call)(void *);

  void (*free)(void *);

} BoxDynFnMut0_CapabilityResult_ptr_t;
void rune_image_set_raw(RunicosBaseImage_t *image,
                        BoxDynFnMut0_CapabilityResult_ptr_t raw);
char const *rune_log_level_name(LogLevel_t level);
typedef struct WasmerRuntimeResult WasmerRuntimeResult_t;
/** \brief
 * Check if the result contains a `BoxedWasmerRuntime`.
 */
bool rune_result_WasmerRuntimeResult_is_ok(WasmerRuntimeResult_t const *result);
/** \brief
 * Check if the result contains a `BoxedError`.
 */
bool rune_result_WasmerRuntimeResult_is_err(
    WasmerRuntimeResult_t const *result);
/** \brief
 * Free the `WasmerRuntimeResult` after you are done with it.
 */
void rune_result_WasmerRuntimeResult_free(WasmerRuntimeResult_t *result);
typedef struct WasmerRuntime WasmerRuntime_t;
/** \brief
 * Get a reference to the `BoxedWasmerRuntime` in this `WasmerRuntimeResult`, or
 * `null` if not present.
 */
WasmerRuntime_t *const *
rune_result_WasmerRuntimeResult_get_ok(WasmerRuntimeResult_t const *result);
/** \brief
 * Get a reference to the `BoxedError` in this `WasmerRuntimeResult`, or `null`
 * if not present.
 */
Error_t *const *
rune_result_WasmerRuntimeResult_get_err(WasmerRuntimeResult_t const *result);
/** \brief
 * Extract the `BoxedWasmerRuntime`, freeing the `WasmerRuntimeResult` and
 * crashing if it actually contains a `BoxedError`.
 */
WasmerRuntime_t *
rune_result_WasmerRuntimeResult_take_ok(WasmerRuntimeResult_t *result);
/** \brief
 * Extract the `BoxedError`, freeing the `WasmerRuntimeResult` and crashing if
 * it actually contains a `BoxedWasmerRuntime`.
 */
Error_t *
rune_result_WasmerRuntimeResult_take_err(WasmerRuntimeResult_t *result);
/** \brief
 *  `&'lt [T]` but with a guaranteed `#[repr(C)]` layout.
 *
 *  # C layout (for some given type T)
 *
 *  ```c
 *  typedef struct {
 *      // Cannot be NULL
 *      T * ptr;
 *      size_t len;
 *  } slice_T;
 *  ```
 *
 *  # Nullable pointer?
 *
 *  If you want to support the above typedef, but where the `ptr` field is
 *  allowed to be `NULL` (with the contents of `len` then being undefined)
 *  use the `Option< slice_ptr<_> >` type.
 */
typedef struct {

  uint8_t const *ptr;

  size_t len;

} slice_ref_uint8_t;
/** \brief
 *  Load a Rune backed by the provided image.
 *
 *  If loading is successful, `runtime_out` will be set to a new `WasmerRuntime`
 *  instance, otherwise an error is returned.
 */
WasmerRuntimeResult_t *rune_wasmer_runtime_load(slice_ref_uint8_t rune,
                                                RunicosBaseImage_t *image);
/** \brief
 *  Free a `WasmerRuntime` once you are done with it.
 */
void rune_wasmer_runtime_free(WasmerRuntime_t *runtime);
/** \brief
 *  Evaluate the Rune pipeline.
 */
RuneResult_t *rune_wasmer_runtime_call(WasmerRuntime_t *runtime);
/** \brief
 *  Construct a new error.
 */
Error_t *rune_error_new(char const *msg);
/** \brief
 *  Free the error once you are done with it.
 */
void rune_error_free(Error_t *e);
/** \brief
 *  Return a newly allocated string containing the error's backtrace.
 */
char *rune_error_backtrace(Error_t const *error);
/** \brief
 *  Return a newly allocated string describing the error.
 */
char *rune_error_to_string(Error_t const *error);
/** \brief
 *  Return a newly allocated string describing the error and any errors that
 *  may have caused it.
 *
 *  This will also contain a backtrace if the `RUST_BACKTRACE` environment
 *  variable is set.
 */
char *rune_error_to_string_verbose(Error_t const *error);
/** \brief
 * Check if the result contains a `u8`.
 */
bool rune_result_RuneResult_is_ok(RuneResult_t const *result);
/** \brief
 * Check if the result contains a `BoxedError`.
 */
bool rune_result_RuneResult_is_err(RuneResult_t const *result);
/** \brief
 * Free the `RuneResult` after you are done with it.
 */
void rune_result_RuneResult_free(RuneResult_t *result);
/** \brief
 * Get a reference to the `u8` in this `RuneResult`, or `null` if not present.
 */
uint8_t const *rune_result_RuneResult_get_ok(RuneResult_t const *result);