example/rune_bindings.dart


  late final _rune_image_set_raw_ptr =
      _lookup<ffi.NativeFunction<_c_rune_image_set_raw>>('rune_image_set_raw');
  late final _dart_rune_image_set_raw _rune_image_set_raw =
      _rune_image_set_raw_ptr.asFunction<_dart_rune_image_set_raw>();

  ffi.Pointer<ffi.Int8> rune_log_level_name(
    int level,
  ) {
    return _rune_log_level_name(
      level,
    );
  }

  late final _rune_log_level_name_ptr =
      _lookup<ffi.NativeFunction<_c_rune_log_level_name>>(
          'rune_log_level_name');
  late final _dart_rune_log_level_name _rune_log_level_name =
      _rune_log_level_name_ptr.asFunction<_dart_rune_log_level_name>();

  /// \brief
  /// Check if the result contains a `BoxedWasmerRuntime`.
  bool rune_result_WasmerRuntimeResult_is_ok(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_is_ok(
          result,
        ) !=
        0;
  }

  late final _rune_result_WasmerRuntimeResult_is_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_is_ok>>(
          'rune_result_WasmerRuntimeResult_is_ok');
  late final _dart_rune_result_WasmerRuntimeResult_is_ok
      _rune_result_WasmerRuntimeResult_is_ok =
      _rune_result_WasmerRuntimeResult_is_ok_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_is_ok>();

  /// \brief
  /// Check if the result contains a `BoxedError`.
  bool rune_result_WasmerRuntimeResult_is_err(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_is_err(
          result,
        ) !=
        0;
  }

  late final _rune_result_WasmerRuntimeResult_is_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_is_err>>(
          'rune_result_WasmerRuntimeResult_is_err');
  late final _dart_rune_result_WasmerRuntimeResult_is_err
      _rune_result_WasmerRuntimeResult_is_err =
      _rune_result_WasmerRuntimeResult_is_err_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_is_err>();

  /// \brief
  /// Free the `WasmerRuntimeResult` after you are done with it.
  void rune_result_WasmerRuntimeResult_free(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_free(
      result,
    );
  }

  late final _rune_result_WasmerRuntimeResult_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_free>>(
          'rune_result_WasmerRuntimeResult_free');
  late final _dart_rune_result_WasmerRuntimeResult_free
      _rune_result_WasmerRuntimeResult_free =
      _rune_result_WasmerRuntimeResult_free_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_free>();

  /// \brief
  /// Get a reference to the `BoxedWasmerRuntime` in this `WasmerRuntimeResult`, or
  /// `null` if not present.
  ffi.Pointer<ffi.Pointer<WasmerRuntime>>
      rune_result_WasmerRuntimeResult_get_ok(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_get_ok(
      result,
    );
  }

  late final _rune_result_WasmerRuntimeResult_get_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_get_ok>>(
          'rune_result_WasmerRuntimeResult_get_ok');
  late final _dart_rune_result_WasmerRuntimeResult_get_ok
      _rune_result_WasmerRuntimeResult_get_ok =
      _rune_result_WasmerRuntimeResult_get_ok_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_get_ok>();

  /// \brief
  /// Get a reference to the `BoxedError` in this `WasmerRuntimeResult`, or `null`
  /// if not present.
  ffi.Pointer<ffi.Pointer<Error>> rune_result_WasmerRuntimeResult_get_err(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_get_err(
      result,
    );
  }

  late final _rune_result_WasmerRuntimeResult_get_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_get_err>>(
          'rune_result_WasmerRuntimeResult_get_err');
  late final _dart_rune_result_WasmerRuntimeResult_get_err
      _rune_result_WasmerRuntimeResult_get_err =
      _rune_result_WasmerRuntimeResult_get_err_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_get_err>();

  /// \brief
  /// Extract the `BoxedWasmerRuntime`, freeing the `WasmerRuntimeResult` and
  /// crashing if it actually contains a `BoxedError`.
  ffi.Pointer<WasmerRuntime> rune_result_WasmerRuntimeResult_take_ok(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_take_ok(
      result,
    );
  }

  late final _rune_result_WasmerRuntimeResult_take_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_take_ok>>(
          'rune_result_WasmerRuntimeResult_take_ok');
  late final _dart_rune_result_WasmerRuntimeResult_take_ok
      _rune_result_WasmerRuntimeResult_take_ok =
      _rune_result_WasmerRuntimeResult_take_ok_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_take_ok>();

  /// \brief
  /// Extract the `BoxedError`, freeing the `WasmerRuntimeResult` and crashing if
  /// it actually contains a `BoxedWasmerRuntime`.
  ffi.Pointer<Error> rune_result_WasmerRuntimeResult_take_err(
    ffi.Pointer<WasmerRuntimeResult> result,
  ) {
    return _rune_result_WasmerRuntimeResult_take_err(
      result,
    );
  }

  late final _rune_result_WasmerRuntimeResult_take_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_WasmerRuntimeResult_take_err>>(
          'rune_result_WasmerRuntimeResult_take_err');
  late final _dart_rune_result_WasmerRuntimeResult_take_err
      _rune_result_WasmerRuntimeResult_take_err =
      _rune_result_WasmerRuntimeResult_take_err_ptr
          .asFunction<_dart_rune_result_WasmerRuntimeResult_take_err>();

  /// \brief
  /// Load a Rune backed by the provided image.
  ///
  /// If loading is successful, `runtime_out` will be set to a new `WasmerRuntime`
  /// instance, otherwise an error is returned.
  ffi.Pointer<WasmerRuntimeResult> rune_wasmer_runtime_load(
    slice_ref_uint8_t rune,
    ffi.Pointer<RunicosBaseImage> image,
  ) {
    return _rune_wasmer_runtime_load(
      rune,
      image,
    );
  }

  late final _rune_wasmer_runtime_load_ptr =
      _lookup<ffi.NativeFunction<_c_rune_wasmer_runtime_load>>(
          'rune_wasmer_runtime_load');
  late final _dart_rune_wasmer_runtime_load _rune_wasmer_runtime_load =
      _rune_wasmer_runtime_load_ptr
          .asFunction<_dart_rune_wasmer_runtime_load>();

  /// \brief
  /// Free a `WasmerRuntime` once you are done with it.
  void rune_wasmer_runtime_free(
    ffi.Pointer<WasmerRuntime> runtime,
  ) {
    return _rune_wasmer_runtime_free(
      runtime,
    );
  }

  late final _rune_wasmer_runtime_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_wasmer_runtime_free>>(
          'rune_wasmer_runtime_free');
  late final _dart_rune_wasmer_runtime_free _rune_wasmer_runtime_free =
      _rune_wasmer_runtime_free_ptr
          .asFunction<_dart_rune_wasmer_runtime_free>();

  /// \brief
  /// Evaluate the Rune pipeline.
  ffi.Pointer<RuneResult> rune_wasmer_runtime_call(
    ffi.Pointer<WasmerRuntime> runtime,
  ) {
    return _rune_wasmer_runtime_call(
      runtime,
    );
  }

  late final _rune_wasmer_runtime_call_ptr =
      _lookup<ffi.NativeFunction<_c_rune_wasmer_runtime_call>>(
          'rune_wasmer_runtime_call');
  late final _dart_rune_wasmer_runtime_call _rune_wasmer_runtime_call =
      _rune_wasmer_runtime_call_ptr
          .asFunction<_dart_rune_wasmer_runtime_call>();

  /// \brief
  /// Construct a new error.
  ffi.Pointer<Error> rune_error_new(
    ffi.Pointer<ffi.Int8> msg,
  ) {
    return _rune_error_new(
      msg,
    );
  }

  late final _rune_error_new_ptr =
      _lookup<ffi.NativeFunction<_c_rune_error_new>>('rune_error_new');
  late final _dart_rune_error_new _rune_error_new =
      _rune_error_new_ptr.asFunction<_dart_rune_error_new>();

  /// \brief
  /// Free the error once you are done with it.
  void rune_error_free(
    ffi.Pointer<Error> e,
  ) {
    return _rune_error_free(
      e,
    );
  }

  late final _rune_error_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_error_free>>('rune_error_free');
  late final _dart_rune_error_free _rune_error_free =
      _rune_error_free_ptr.asFunction<_dart_rune_error_free>();

  /// \brief
  /// Return a newly allocated string containing the error's backtrace.
  ffi.Pointer<ffi.Int8> rune_error_backtrace(
    ffi.Pointer<Error> error,
  ) {
    return _rune_error_backtrace(
      error,
    );
  }

  late final _rune_error_backtrace_ptr =
      _lookup<ffi.NativeFunction<_c_rune_error_backtrace>>(
          'rune_error_backtrace');
  late final _dart_rune_error_backtrace _rune_error_backtrace =
      _rune_error_backtrace_ptr.asFunction<_dart_rune_error_backtrace>();

  /// \brief
  /// Return a newly allocated string describing the error.
  ffi.Pointer<ffi.Int8> rune_error_to_string(
    ffi.Pointer<Error> error,
  ) {
    return _rune_error_to_string(
      error,
    );
  }

  late final _rune_error_to_string_ptr =
      _lookup<ffi.NativeFunction<_c_rune_error_to_string>>(
          'rune_error_to_string');
  late final _dart_rune_error_to_string _rune_error_to_string =
      _rune_error_to_string_ptr.asFunction<_dart_rune_error_to_string>();

  /// \brief
  /// Return a newly allocated string describing the error and any errors that
  /// may have caused it.
  ///
  /// This will also contain a backtrace if the `RUST_BACKTRACE` environment
  /// variable is set.
  ffi.Pointer<ffi.Int8> rune_error_to_string_verbose(
    ffi.Pointer<Error> error,
  ) {
    return _rune_error_to_string_verbose(
      error,
    );
  }

  late final _rune_error_to_string_verbose_ptr =
      _lookup<ffi.NativeFunction<_c_rune_error_to_string_verbose>>(
          'rune_error_to_string_verbose');
  late final _dart_rune_error_to_string_verbose _rune_error_to_string_verbose =
      _rune_error_to_string_verbose_ptr
          .asFunction<_dart_rune_error_to_string_verbose>();

  /// \brief
  /// Check if the result contains a `u8`.
  bool rune_result_RuneResult_is_ok(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_is_ok(
          result,
        ) !=
        0;
  }

  late final _rune_result_RuneResult_is_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_is_ok>>(
          'rune_result_RuneResult_is_ok');
  late final _dart_rune_result_RuneResult_is_ok _rune_result_RuneResult_is_ok =
      _rune_result_RuneResult_is_ok_ptr
          .asFunction<_dart_rune_result_RuneResult_is_ok>();

  /// \brief
  /// Check if the result contains a `BoxedError`.
  bool rune_result_RuneResult_is_err(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_is_err(
          result,
        ) !=
        0;
  }

  late final _rune_result_RuneResult_is_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_is_err>>(
          'rune_result_RuneResult_is_err');
  late final _dart_rune_result_RuneResult_is_err
      _rune_result_RuneResult_is_err = _rune_result_RuneResult_is_err_ptr
          .asFunction<_dart_rune_result_RuneResult_is_err>();

  /// \brief
  /// Free the `RuneResult` after you are done with it.
  void rune_result_RuneResult_free(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_free(
      result,
    );
  }

  late final _rune_result_RuneResult_free_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_free>>(
          'rune_result_RuneResult_free');
  late final _dart_rune_result_RuneResult_free _rune_result_RuneResult_free =
      _rune_result_RuneResult_free_ptr
          .asFunction<_dart_rune_result_RuneResult_free>();

  /// \brief
  /// Get a reference to the `u8` in this `RuneResult`, or `null` if not present.
  ffi.Pointer<ffi.Uint8> rune_result_RuneResult_get_ok(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_get_ok(
      result,
    );
  }
